# claude-daemon

./: .env.example  .gitignore  00-overview.md  01-architecture.md  02-canonical-schema.md  03-plaid.md  04-snaptrade.md  05-manual-entry-and-upload.md  06-payments-port.md  07-migration-and-rollout.md  08-risks-and-open-questions.md  CLAUDE.md  CLAUDE_CODE_SPEC.md  README.md  config.example.yaml  financial-data-layer-brief.md  install.sh  plaid-research.md  pyproject.toml  snaptrade-research.md
.github/: dependabot.yml
.github/workflows/: security.yml
service/: claude-daemon.service  com.claude-daemon.plist
src/claude_daemon/: __init__.py  __main__.py  cli.py
src/claude_daemon/agents/: agent.py  bootstrap.py  discussion.py  evolution.py  failure_analyzer.py  improvement.py  orchestrator.py  registry.py  shared_brain.py  template_merge.py  watcher.py  workflow.py
src/claude_daemon/core/: config.py  daemon.py  env_manager.py  managed_agents.py  process.py  sdk_bridge.py  signals.py
src/claude_daemon/factory/: __init__.py  config.py  factory.py  models.py
src/claude_daemon/integrations/: base.py  dashboard.py  discord_bot.py  http_api.py  paperclip.py  router.py  telegram.py
src/claude_daemon/memory/: compactor.py  (+5 more)
tests/: conftest.py  test_agent_model_cost_alerts.py  test_agents.py  test_alerts_api.py  test_approvals.py  test_budgets.py  test_config.py  test_cost_snapshot.py  test_crash_detection.py  test_daemon_status.py  test_dashboard_auth.py  test_dashboard_broadcast.py  test_delegation_syntax.py  test_discussion.py  test_durable.py  test_embeddings.py  test_enhancements.py  test_evo_integration.py  test_evolution.py  test_factory.py  test_failure_analyzer.py  test_goals.py  test_hardening.py  test_heartbeat.py  test_improvement.py  test_improvement_plan_api.py  test_logs_tail.py  test_managed_agents.py  test_mcp.py  test_memory_enhanced.py  test_paperclip.py  test_phase5_fixes.py  test_phase6_fixes.py  test_prewarm_hardening.py  test_process.py  test_process_stream_errors.py  test_router.py  test_scheduler.py  test_sdk_bridge_timeout.py  test_sdk_budget.py  (+12 more)
(+31 files in other folders)
